Remove class modifier for profile description scrollbars and replace it with calculated js value to fix unnecessary padding for floating scrollbars.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1842,10 +1842,6 @@ file. These definitions will be defined mobile first.
     margin-block-end: 0;
 }
 
-.profile-bio__description--has-scrollbar {
-    padding-right: 1em;
-}
-
 @media (min-width:480px) {
     .profile-bio {
         flex-direction: row;
